--- a/ExtApp/ExtApp.Web/ExtApp.Web.csproj
+++ b/ExtApp/ExtApp.Web/ExtApp.Web.csproj
@@ -155,8 +155,10 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="app\App.js" />
+    <Content Include="app\test\FileUploadTest.js" />
     <Content Include="app\test\MapShowTest.js" />
     <Content Include="app\test\MapDrawTest.js" />
+    <Content Include="app\widget\FileUpload.js" />
     <Content Include="app\widget\MapShow.js" />
     <Content Include="app\widget\MapDraw.js" />
     <Content Include="packages\map\css\map.css" />
@@ -4165,6 +4167,23 @@
     <Content Include="packages\mxGraph\resources\graph_zh.txt" />
     <Content Include="packages\RequireJs\require.js" />
     <Content Include="packages\RequireJs\require.min.js" />
+    <Content Include="packages\webuploader\Uploader.swf" />
+    <Content Include="packages\webuploader\webuploader.css" />
+    <Content Include="packages\webuploader\webuploader.custom.js" />
+    <Content Include="packages\webuploader\webuploader.custom.min.js" />
+    <Content Include="packages\webuploader\webuploader.fis.js" />
+    <Content Include="packages\webuploader\webuploader.flashonly.js" />
+    <Content Include="packages\webuploader\webuploader.flashonly.min.js" />
+    <Content Include="packages\webuploader\webuploader.html5only.js" />
+    <Content Include="packages\webuploader\webuploader.html5only.min.js" />
+    <Content Include="packages\webuploader\webuploader.js" />
+    <Content Include="packages\webuploader\webuploader.min.js" />
+    <Content Include="packages\webuploader\webuploader.noimage.js" />
+    <Content Include="packages\webuploader\webuploader.noimage.min.js" />
+    <Content Include="packages\webuploader\webuploader.nolog.js" />
+    <Content Include="packages\webuploader\webuploader.nolog.min.js" />
+    <Content Include="packages\webuploader\webuploader.withoutimage.js" />
+    <Content Include="packages\webuploader\webuploader.withoutimage.min.js" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
@@ -4177,6 +4196,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
+    <Content Include="packages\webuploader\README.md" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
