--- a/ExtApp/ExtApp.BLL/ExtApp.BLL.csproj
+++ b/ExtApp/ExtApp.BLL/ExtApp.BLL.csproj
@@ -122,22 +122,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Authority\RoleMenuBLL.cs" />
-    <Compile Include="Authority\MenuBLL.cs" />
-    <Compile Include="Authority\RoleBLL.cs" />
+    <Compile Include="App\RoleMenuBLL.cs" />
+    <Compile Include="App\MenuBLL.cs" />
+    <Compile Include="App\RoleBLL.cs" />
     <Compile Include="BaseBLL.cs" />
-    <Compile Include="Core\FilesBLL.cs" />
-    <Compile Include="Core\ConfigBLL.cs" />
-    <Compile Include="Core\ConfigSectionBLL.cs" />
-    <Compile Include="Core\DatabaseBackupBLL.cs" />
-    <Compile Include="Core\DicBLL.cs" />
-    <Compile Include="Core\DicItemBLL.cs" />
-    <Compile Include="Core\LogBLL.cs" />
-    <Compile Include="Authority\LoginBLL.cs" />
-    <Compile Include="Personnel\DeptBLL.cs" />
-    <Compile Include="Personnel\UserBLL.cs" />
+    <Compile Include="App\FilesBLL.cs" />
+    <Compile Include="App\ConfigBLL.cs" />
+    <Compile Include="App\ConfigSectionBLL.cs" />
+    <Compile Include="App\DatabaseBackupBLL.cs" />
+    <Compile Include="App\DicBLL.cs" />
+    <Compile Include="App\DicItemBLL.cs" />
+    <Compile Include="App\LogBLL.cs" />
+    <Compile Include="App\LoginBLL.cs" />
+    <Compile Include="App\DeptBLL.cs" />
+    <Compile Include="App\UserBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Workflow\WorkflowBLL.cs" />
+    <Compile Include="App\WorkflowBLL.cs" />
     <Compile Include="Work\MessageReceiveBLL.cs" />
     <Compile Include="Work\MessageBLL.cs" />
   </ItemGroup>
