--- a/ExtApp/ExtApp.Model/ExtApp.Model.csproj
+++ b/ExtApp/ExtApp.Model/ExtApp.Model.csproj
@@ -92,53 +92,53 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Authority\View\RoleMenuParam.cs" />
-    <Compile Include="Authority\View\ChangePwdModel.cs" />
-    <Compile Include="Authority\View\DeptRoleMenuEditIn.cs" />
-    <Compile Include="Authority\View\DeptRoleMenuItem.cs" />
-    <Compile Include="Authority\View\LoginModel.cs" />
-    <Compile Include="Authority\View\MenuEditParam.cs" />
-    <Compile Include="Authority\View\RoleEditParam.cs" />
-    <Compile Include="Authority\View\RoleListParam.cs" />
-    <Compile Include="Core\Files.cs" />
-    <Compile Include="Core\DatabaseBackup.cs" />
-    <Compile Include="Core\View\ConfigEditParam.cs" />
-    <Compile Include="Core\View\ConfigSectionNode.cs" />
-    <Compile Include="Core\View\ConfigSectionParam.cs" />
-    <Compile Include="Core\View\DatabaseBackupParam.cs" />
-    <Compile Include="Core\View\DicEditParam.cs" />
-    <Compile Include="Core\View\DicItemEditParam.cs" />
-    <Compile Include="Core\View\DicNode.cs" />
-    <Compile Include="Core\View\LogListParam.cs" />
-    <Compile Include="Core\View\MenuNode.cs" />
-    <Compile Include="Enum\Sort.cs" />
-    <Compile Include="ExtJs\TreeNode.cs" />
-    <Compile Include="Leave\Leave.cs" />
-    <Compile Include="Personnel\View\DeptTreeNode.cs" />
-    <Compile Include="Personnel\View\UserListParam.cs" />
-    <Compile Include="Personnel\View\UserEditParam.cs" />
-    <Compile Include="Result\DataResult.cs" />
-    <Compile Include="Personnel\View\DeptEditParam.cs" />
+    <Compile Include="App\View\RoleMenuParam.cs" />
+    <Compile Include="App\View\ChangePwdModel.cs" />
+    <Compile Include="App\View\DeptRoleMenuEditIn.cs" />
+    <Compile Include="App\View\DeptRoleMenuItem.cs" />
+    <Compile Include="App\View\LoginModel.cs" />
+    <Compile Include="App\View\MenuEditParam.cs" />
+    <Compile Include="App\View\RoleEditParam.cs" />
+    <Compile Include="App\View\RoleListParam.cs" />
+    <Compile Include="App\Files.cs" />
+    <Compile Include="App\DatabaseBackup.cs" />
+    <Compile Include="App\View\ConfigEditParam.cs" />
+    <Compile Include="App\View\ConfigSectionNode.cs" />
+    <Compile Include="App\View\ConfigSectionParam.cs" />
+    <Compile Include="App\View\DatabaseBackupParam.cs" />
+    <Compile Include="App\View\DicEditParam.cs" />
+    <Compile Include="App\View\DicItemEditParam.cs" />
+    <Compile Include="App\View\DicNode.cs" />
+    <Compile Include="App\View\LogListParam.cs" />
+    <Compile Include="App\View\MenuNode.cs" />
+    <Compile Include="App\Enum\Sort.cs" />
+    <Compile Include="App\ExtJs\TreeNode.cs" />
+    <Compile Include="Work\Leave.cs" />
+    <Compile Include="App\View\DeptTreeNode.cs" />
+    <Compile Include="App\View\UserListParam.cs" />
+    <Compile Include="App\View\UserEditParam.cs" />
+    <Compile Include="App\Result\DataResult.cs" />
+    <Compile Include="App\View\DeptEditParam.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Result\LoginResult.cs" />
-    <Compile Include="Result\ListResult.cs" />
-    <Compile Include="Result\Result.cs" />
-    <Compile Include="Authority\Menu.cs" />
-    <Compile Include="Core\ConfigSection.cs" />
-    <Compile Include="Core\Config.cs" />
-    <Compile Include="Authority\RoleMenu.cs" />
-    <Compile Include="Personnel\Dept.cs" />
-    <Compile Include="Core\DicItem.cs" />
-    <Compile Include="Core\Dic.cs" />
-    <Compile Include="Core\Log.cs" />
-    <Compile Include="Enum\LogLevel.cs" />
-    <Compile Include="Enum\LogSource.cs" />
-    <Compile Include="Enum\LogType.cs" />
-    <Compile Include="Authority\Role.cs" />
-    <Compile Include="Personnel\User.cs" />
-    <Compile Include="Workflow\WorkflowEvent.cs" />
-    <Compile Include="Workflow\WorkflowInstance.cs" />
-    <Compile Include="Workflow\Workflow.cs" />
+    <Compile Include="App\Result\LoginResult.cs" />
+    <Compile Include="App\Result\ListResult.cs" />
+    <Compile Include="App\Result\Result.cs" />
+    <Compile Include="App\Menu.cs" />
+    <Compile Include="App\ConfigSection.cs" />
+    <Compile Include="App\Config.cs" />
+    <Compile Include="App\RoleMenu.cs" />
+    <Compile Include="App\Dept.cs" />
+    <Compile Include="App\DicItem.cs" />
+    <Compile Include="App\Dic.cs" />
+    <Compile Include="App\Log.cs" />
+    <Compile Include="App\Enum\LogLevel.cs" />
+    <Compile Include="App\Enum\LogSource.cs" />
+    <Compile Include="App\Enum\LogType.cs" />
+    <Compile Include="App\Role.cs" />
+    <Compile Include="App\User.cs" />
+    <Compile Include="App\WorkflowEvent.cs" />
+    <Compile Include="App\WorkflowInstance.cs" />
+    <Compile Include="App\Workflow.cs" />
     <Compile Include="Work\MessageReceive.cs" />
     <Compile Include="Work\Message.cs" />
   </ItemGroup>
