前台框架目录调整

--- a/ExtApp/ExtApp.Web/ExtApp.Web.csproj
+++ b/ExtApp/ExtApp.Web/ExtApp.Web.csproj
@@ -412,8 +412,8 @@
     <Content Include="app\view\core\databaseBackup\List.js" />
     <Content Include="app\view\core\databaseBackup\ListController.js" />
     <Content Include="app\view\core\logs\View.js" />
-    <Content Include="app\view\main\accordion\Home.js" />
-    <Content Include="app\view\main\desktop\SettingsController.js" />
+    <Content Include="app\main\accordion\Home.js" />
+    <Content Include="app\main\desktop\SettingsController.js" />
     <Content Include="app\view\core\config\EditSection.js" />
     <Content Include="app\view\core\config\EditSectionController.js" />
     <Content Include="app\view\core\config\Edit.js" />
@@ -442,15 +442,15 @@
     <Content Include="app\view\core\dic\Edit.js" />
     <Content Include="app\view\core\dic\List.js" />
     <Content Include="app\view\core\dic\ListController.js" />
-    <Content Include="app\view\main\accordion\MenuController.js" />
-    <Content Include="app\view\main\ChangePwd.js" />
-    <Content Include="app\view\main\accordion\IndexController.js" />
-    <Content Include="app\view\main\desktop\Index.js" />
-    <Content Include="app\view\main\desktop\Notepad.js" />
-    <Content Include="app\view\main\desktop\Settings.js" />
-    <Content Include="app\view\main\desktop\Wallpaper.js" />
-    <Content Include="app\view\main\LoginController.js" />
-    <Content Include="app\view\main\ChangePwdController.js" />
+    <Content Include="app\main\accordion\MenuController.js" />
+    <Content Include="app\main\ChangePwd.js" />
+    <Content Include="app\main\accordion\IndexController.js" />
+    <Content Include="app\main\desktop\Index.js" />
+    <Content Include="app\main\desktop\Notepad.js" />
+    <Content Include="app\main\desktop\Settings.js" />
+    <Content Include="app\main\desktop\Wallpaper.js" />
+    <Content Include="app\main\LoginController.js" />
+    <Content Include="app\main\ChangePwdController.js" />
     <Content Include="app\view\core\logs\List.js" />
     <Content Include="app\view\core\logs\ListController.js" />
     <Content Include="app\view\authority\role\Edit.js" />
@@ -464,9 +464,9 @@
     <Content Include="app\store\authority\Menu.js" />
     <Content Include="app\store\personnel\User.js" />
     <Content Include="app\util\Theme.js" />
-    <Content Include="app\view\main\accordion\Menu.js" />
-    <Content Include="app\view\main\accordion\Index.js" />
-    <Content Include="app\view\main\Login.js" />
+    <Content Include="app\main\accordion\Menu.js" />
+    <Content Include="app\main\accordion\Index.js" />
+    <Content Include="app\main\Login.js" />
     <Content Include="app\view\personnel\user\Edit.js" />
     <Content Include="app\view\personnel\user\List.js" />
     <Content Include="app\view\Viewport.js" />
