前台模型位置调整

--- a/ExtApp/ExtApp.Web/ExtApp.Web.csproj
+++ b/ExtApp/ExtApp.Web/ExtApp.Web.csproj
@@ -155,6 +155,102 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="app\App.js" />
+    <Content Include="app\app\config\Edit.js" />
+    <Content Include="app\app\config\EditController.js" />
+    <Content Include="app\app\config\EditSection.js" />
+    <Content Include="app\app\config\EditSectionController.js" />
+    <Content Include="app\app\config\List.js" />
+    <Content Include="app\app\config\ListController.js" />
+    <Content Include="app\app\databaseBackup\List.js" />
+    <Content Include="app\app\databaseBackup\ListController.js" />
+    <Content Include="app\app\dept\Add.js" />
+    <Content Include="app\app\dept\AddController.js" />
+    <Content Include="app\app\dept\List.js" />
+    <Content Include="app\app\dept\ListController.js" />
+    <Content Include="app\app\design\Edit.js" />
+    <Content Include="app\app\design\EditController.js" />
+    <Content Include="app\app\design\List.js" />
+    <Content Include="app\app\design\ListController.js" />
+    <Content Include="app\app\dic\Edit.js" />
+    <Content Include="app\app\dic\EditController.js" />
+    <Content Include="app\app\dic\EditItem.js" />
+    <Content Include="app\app\dic\EditItemController.js" />
+    <Content Include="app\app\dic\List.js" />
+    <Content Include="app\app\dic\ListController.js" />
+    <Content Include="app\app\logs\List.js" />
+    <Content Include="app\app\logs\ListController.js" />
+    <Content Include="app\app\logs\View.js" />
+    <Content Include="app\app\main\accordion\Home.js" />
+    <Content Include="app\app\main\accordion\Index.js" />
+    <Content Include="app\app\main\accordion\IndexController.js" />
+    <Content Include="app\app\main\accordion\Menu.js" />
+    <Content Include="app\app\main\accordion\MenuController.js" />
+    <Content Include="app\app\main\ChangePwd.js" />
+    <Content Include="app\app\main\ChangePwdController.js" />
+    <Content Include="app\app\main\desktop\Index.js" />
+    <Content Include="app\app\main\desktop\Notepad.js" />
+    <Content Include="app\app\main\desktop\Settings.js" />
+    <Content Include="app\app\main\desktop\SettingsController.js" />
+    <Content Include="app\app\main\desktop\Wallpaper.js" />
+    <Content Include="app\app\main\Login.js" />
+    <Content Include="app\app\main\LoginController.js" />
+    <Content Include="app\app\menu\Edit.js" />
+    <Content Include="app\app\menu\EditController.js" />
+    <Content Include="app\app\menu\List.js" />
+    <Content Include="app\app\menu\ListController.js" />
+    <Content Include="app\app\model\Config.js" />
+    <Content Include="app\app\model\ConfigSection.js" />
+    <Content Include="app\app\model\DatabaseBackup.js" />
+    <Content Include="app\app\model\Dept.js" />
+    <Content Include="app\app\model\Dic.js" />
+    <Content Include="app\app\model\DicItem.js" />
+    <Content Include="app\app\model\Log.js" />
+    <Content Include="app\app\model\Menu.js" />
+    <Content Include="app\app\model\Message.js" />
+    <Content Include="app\app\model\MessageReceive.js" />
+    <Content Include="app\app\model\Role.js" />
+    <Content Include="app\app\model\User.js" />
+    <Content Include="app\app\model\Workflow.js" />
+    <Content Include="app\app\role\Auth.js" />
+    <Content Include="app\app\role\AuthController.js" />
+    <Content Include="app\app\role\Edit.js" />
+    <Content Include="app\app\role\EditController.js" />
+    <Content Include="app\app\role\List.js" />
+    <Content Include="app\app\role\ListController.js" />
+    <Content Include="app\app\store\Config.js" />
+    <Content Include="app\app\store\ConfigSectionTree.js" />
+    <Content Include="app\app\store\DatabaseBackup.js" />
+    <Content Include="app\app\store\Dept.js" />
+    <Content Include="app\app\store\DeptTree.js" />
+    <Content Include="app\app\store\DeptType.js" />
+    <Content Include="app\app\store\Dic.js" />
+    <Content Include="app\app\store\DicItem.js" />
+    <Content Include="app\app\store\DicTree.js" />
+    <Content Include="app\app\store\DicType.js" />
+    <Content Include="app\app\store\IconType.js" />
+    <Content Include="app\app\store\Log.js" />
+    <Content Include="app\app\store\LogLevel.js" />
+    <Content Include="app\app\store\LogSource.js" />
+    <Content Include="app\app\store\LogType.js" />
+    <Content Include="app\app\store\Menu.js" />
+    <Content Include="app\app\store\MenuTree.js" />
+    <Content Include="app\app\store\MenuTreeAuth.js" />
+    <Content Include="app\app\store\Message.js" />
+    <Content Include="app\app\store\MessageReceive.js" />
+    <Content Include="app\app\store\OpenType.js" />
+    <Content Include="app\app\store\Role.js" />
+    <Content Include="app\app\store\RoleAll.js" />
+    <Content Include="app\app\store\RoleMenuTree.js" />
+    <Content Include="app\app\store\Sex.js" />
+    <Content Include="app\app\store\Style.js" />
+    <Content Include="app\app\store\Theme.js" />
+    <Content Include="app\app\store\UrlType.js" />
+    <Content Include="app\app\store\User.js" />
+    <Content Include="app\app\store\Workflow.js" />
+    <Content Include="app\app\user\Edit.js" />
+    <Content Include="app\app\user\EditController.js" />
+    <Content Include="app\app\user\List.js" />
+    <Content Include="app\app\user\ListController.js" />
     <Content Include="app\test\FileUploadTest.js" />
     <Content Include="app\test\MapShowTest.js" />
     <Content Include="app\test\MapDrawTest.js" />
@@ -4188,6 +4284,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="app\work\" />
     <Folder Include="uploads\" />
   </ItemGroup>
   <ItemGroup>
