ExtJs前台架构调整

--- a/ExtApp/ExtApp.Web/ExtApp.Web.csproj
+++ b/ExtApp/ExtApp.Web/ExtApp.Web.csproj
@@ -180,20 +180,20 @@
     <Content Include="app\app\logs\List.js" />
     <Content Include="app\app\logs\ListController.js" />
     <Content Include="app\app\logs\View.js" />
-    <Content Include="app\app\main\accordion\Home.js" />
-    <Content Include="app\app\main\accordion\Index.js" />
-    <Content Include="app\app\main\accordion\IndexController.js" />
-    <Content Include="app\app\main\accordion\Menu.js" />
-    <Content Include="app\app\main\accordion\MenuController.js" />
-    <Content Include="app\app\main\ChangePwd.js" />
-    <Content Include="app\app\main\ChangePwdController.js" />
-    <Content Include="app\app\main\desktop\Index.js" />
-    <Content Include="app\app\main\desktop\Notepad.js" />
-    <Content Include="app\app\main\desktop\Settings.js" />
-    <Content Include="app\app\main\desktop\SettingsController.js" />
-    <Content Include="app\app\main\desktop\Wallpaper.js" />
-    <Content Include="app\app\main\Login.js" />
-    <Content Include="app\app\main\LoginController.js" />
+    <Content Include="app\app\accordion\Home.js" />
+    <Content Include="app\app\accordion\Index.js" />
+    <Content Include="app\app\accordion\IndexController.js" />
+    <Content Include="app\app\accordion\Menu.js" />
+    <Content Include="app\app\accordion\MenuController.js" />
+    <Content Include="app\app\ChangePwd.js" />
+    <Content Include="app\app\ChangePwdController.js" />
+    <Content Include="app\app\desktop\Index.js" />
+    <Content Include="app\app\desktop\Notepad.js" />
+    <Content Include="app\app\desktop\Settings.js" />
+    <Content Include="app\app\desktop\SettingsController.js" />
+    <Content Include="app\app\desktop\Wallpaper.js" />
+    <Content Include="app\app\Login.js" />
+    <Content Include="app\app\LoginController.js" />
     <Content Include="app\app\menu\Edit.js" />
     <Content Include="app\app\menu\EditController.js" />
     <Content Include="app\app\menu\List.js" />
@@ -269,6 +269,7 @@
     <Content Include="app\work\model\MessageReceive.js" />
     <Content Include="app\work\store\Message.js" />
     <Content Include="app\work\store\MessageReceive.js" />
+    <Content Include="test.html" />
     <Content Include="packages\jquery\jquery.js" />
     <Content Include="packages\jquery\jquery.min.js" />
     <Content Include="packages\map\css\map.css" />
