--- a/ExtApp/ExtApp.Web/Web.config
+++ b/ExtApp/ExtApp.Web/Web.config
@@ -22,7 +22,13 @@
   </connectionStrings>
 
   <!-- 应用程序配置 -->
-  <appSettings></appSettings>
+  <appSettings>
+    <!-- 框架样式（Accordion-折叠面板，Desktop-桌面样式） -->
+    <add key="Style" value="Accordion" />
+
+    <!-- 主题路径 -->
+    <add key="Theme" value="packages/extjs/themes/theme-classic/theme-classic-all.css" />
+  </appSettings>
 
   <!-- Hibernate配置 -->
   <hibernate-configuration xmlns="urn:nhibernate-configuration-2.2">
