登录和主页改完aspx页面

--- a/ExtApp/ExtApp.Web/Web.config
+++ b/ExtApp/ExtApp.Web/Web.config
@@ -28,6 +28,9 @@
 
     <!-- 主题路径 -->
     <add key="Theme" value="packages/extjs/themes/theme-classic/theme-classic-all.css" />
+
+    <!-- 禁用BrowserLink -->
+    <add key="vs:EnableBrowserLink" value="false"/>
   </appSettings>
 
   <!-- Hibernate配置 -->
