--- a/ExtApp/ExtApp.Web/Web.config
+++ b/ExtApp/ExtApp.Web/Web.config
@@ -24,7 +24,7 @@
   <!-- 应用程序配置 -->
   <appSettings>
     <!-- 框架样式（Accordion-折叠面板，Desktop-桌面样式） -->
-    <add key="Style" value="Accordion" />
+    <add key="Style" value="Desktop" />
 
     <!-- 主题路径 -->
     <add key="Theme" value="packages/extjs/themes/theme-classic/theme-classic-all.css" />
