打开工作流文件

--- a/ExtApp/ExtApp.AppBase/ExtApp.AppBase.csproj
+++ b/ExtApp/ExtApp.AppBase/ExtApp.AppBase.csproj
@@ -104,6 +104,7 @@
   <ItemGroup>
     <Compile Include="ApiAuthAttribute.cs" />
     <Compile Include="ApiBase.cs" />
+    <Compile Include="XmlResult.cs" />
     <Compile Include="JsonResult.cs" />
     <Compile Include="WebApiConfig.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
