修复一个bug，该bug导致在iis上无法正常连接数据库。

--- a/ExtApp/ExtApp.Web/Web.config
+++ b/ExtApp/ExtApp.Web/Web.config
@@ -18,7 +18,7 @@
 
   <!-- 连接字符串 -->
   <connectionStrings>
-    <add name="ExtApp" connectionString="Data Source=127.0.0.1;Initial Catalog=ExtApp;User Id=sa;Password=sa2017;Integrated Security=True;Connect Timeout=30;" providerName="System.Data.SqlClient" />
+    <add name="ExtApp" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=ExtApp;User Id=sa;Password=sa2018;Integrated Security=False;Connect Timeout=30;" providerName="System.Data.SqlClient" />
   </connectionStrings>
 
   <!-- 应用程序配置 -->
@@ -36,7 +36,7 @@
   <!-- Hibernate配置 -->
   <hibernate-configuration xmlns="urn:nhibernate-configuration-2.2">
     <session-factory>
-      <property name="dialect">NHibernate.Dialect.MsSql2008Dialect</property>
+      <property name="dialect">NHibernate.Dialect.MsSql2012Dialect</property>
       <property name="connection.provider">NHibernate.Connection.DriverConnectionProvider</property>
       <property name="show_sql">true</property>
       <property name="format_sql">true</property>
